@@ -4,6 +4,9 @@ v1.8 (XXXX-XX-XX)
 - Turn on NFWPotential physical output when initializing using the 
   virial mass mvir (see #465)
 
+- Allow actions to be computed for Orbit instances with actionAngle
+  methods that don't compute frequencies.
+
 v1.7.1 (2021-11-17)
 ===================
 
